--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
   <div class="p2 wrap">
     <div class="measure mt1 center">
       <small>
-        Stuff written by <a href="/about">Carlos Alexandro Becker</a>.<br>
-        &lt;/&gt; available on <a href="https://github.com/caarlos0/caarlos0.github.com">Github</a>.
+        Content written by <a href="/about">DJEKMANI Azz-Eddine</a>.<br>
+        &lt;/&gt; available on <a href="https://github.com/djekmani/djekmani.github.com">Github</a>.
       </small>
     </div>
   </div>
