--- a/_includes/post_header.html
+++ b/_includes/post_header.html
@@ -4,10 +4,10 @@
 {% endif %}
 
 <div class="post-header mb2">
-  <h1>{{ page.title }}</h1>
-  <span class="post-meta">{{ page.date | date: "%b %-d, %Y" }}</span><br>
+  <h3>{{ page.title }}</h3>
+  <span class="parag">{{ page.date | date: "%b %-d, %Y" }} | Author: <a href="/about">{{site.author.name}}</a></span><br>
   {% if page.update_date %}
     <span class="post-meta">Updated: {{ page.update_date | date: "%b %-d, %Y" }}</span><br>
   {% endif %}
-  <span class="post-meta small">{{ minutes }} minute read</span>
 </div>
+
