--- a/_scss/_basscss.scss
+++ b/_scss/_basscss.scss
@@ -12,6 +12,9 @@
 body, button, input, select, textarea, pre {
   margin: 0;
 }
+.parag{
+  font-size: 15px
+}
 
 h1, h2, h3, h4, h5, h6, p, dl, ol, ul {
   margin-top: 0;
